# tubemin

./: .gitignore  CHANGELOG.md  Caddyfile  README.md  docker-compose.local.yml  docker-compose.yml  example.env  release-please-config.json
.claude/skills/rebuild/: SKILL.md
.github/workflows/: cd.yml  ci.yml  docker.yml  release-please.yml
docs/superpowers/plans/: 2026-06-24-tubemin-extension.md  2026-06-24-tubemin-server.md  2026-06-26-ui-reskin.md  2026-06-28-progress-and-states.md
docs/superpowers/specs/: 2026-06-24-tubemin-design.md  2026-06-26-ui-reskin-design.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js  settings.html  settings.js  theme.css
launchagents/: com.walter.weekly-cache-cleanup.plist
scripts/: peertube-init.sh  weekly-cache-cleanup.sh
server/: CHANGELOG.md  Cargo.toml  Dockerfile
server/migrations/: 001_initial.sql  002_add_title.sql  003_add_peertube_thumb.sql  004_add_peertube_uuid.sql  005_add_source_url.sql  006_add_is_direct.sql
server/src/: api_keys.rs  config.rs  db.rs  direct_download.rs  main.rs  metube.rs  metube_socket.rs  oidc.rs  password_auth.rs  peertube.rs  poller.rs  progress.rs  state.rs  transcoding_poller.rs  url_validator.rs  video_meta.rs  watcher.rs
server/src/handlers/: check_submission.rs  check_url.rs  dashboard.rs  mod.rs  settings.rs  submissions.rs  submit.rs  validate.rs
server/static/: app.js  style.css
server/templates/: dashboard.html  login.html  settings.html
