[package]
name = "tubemin"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "chrono", "uuid"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio-util = { version = "0.7", features = ["io"] }
notify = "6"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower-sessions = { version = "0.13", features = ["memory-store"] }
openidconnect = "3"
minijinja = { version = "2", features = ["loader"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
tokio-tungstenite = "0.23"
futures-util = "0.3"

[dev-dependencies]
axum-test = "15"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
